--- a/random_forest_tree_visualization/random_forest_tree_visualization.ipynb
+++ b/random_forest_tree_visualization/random_forest_tree_visualization.ipynb
@@ -4433,10 +4433,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(rf.estimators_)"
+   ]
   }
  ],
  "metadata": {
